--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mousetrap-ts",
+  "name": "micetrap",
   "version": "1.0.0",
   "description": "Simple library for handling keyboard shortcuts",
   "main": "dist/index.js",
@@ -29,9 +29,13 @@
     "prepush": "npm run build"
   },
   "devDependencies": {
+    "@types/react": "^19.0.7",
+    "happy-dom": "^16.7.2",
     "husky": "0.14.3",
+    "react": "^19.0.0",
     "rimraf": "2.6.2",
     "tsup": "^8.3.5",
-    "typescript": "^5.7.3"
+    "typescript": "^5.7.3",
+    "vitest": "^3.0.3"
   }
 }
