--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "micetrap",
-  "version": "1.0.0",
+  "version": "1.0.0-beta.1",
   "description": "Simple library for handling keyboard shortcuts",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -11,11 +11,17 @@
   "author": "Hanakla <hanakla.dev@gmail.com>",
   "license": "Apache-2.0",
   "readmeFilename": "README.md",
+  "sideEffects": false,
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
       "import": "./dist/index.mjs",
       "require": "./dist/index.js"
+    },
+    "./react": {
+      "types": "./dist/react.d.ts",
+      "import": "./dist/react.mjs",
+      "require": "./dist/react.js"
     }
   },
   "scripts": {
