--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
   },
   "scripts": {
     "ci": "npm run clean && npm run lint && npm run build:prod",
-    "build": "npm run clean && tsup src/index.ts",
-    "dev": "npm run clean && tsup src/index.ts --watch",
+    "build": "npm run clean && tsup",
+    "dev": "npm run clean && tsup --watch",
+    "start": "vite",
     "clean": "npm run clean:dist && npm run clean:cache",
     "clean:dist": "rimraf -- dist",
     "clean:cache": "rimraf -- .tmp",
@@ -35,13 +36,20 @@
     "prepush": "npm run build"
   },
   "devDependencies": {
+    "@types/node": "^22.10.7",
     "@types/react": "^19.0.7",
+    "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.20",
     "happy-dom": "^16.7.2",
     "husky": "0.14.3",
+    "postcss": "^8.5.1",
     "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "rimraf": "2.6.2",
+    "tailwindcss": "^3.4.17",
     "tsup": "^8.3.5",
     "typescript": "^5.7.3",
+    "vite": "^6.0.11",
     "vitest": "^3.0.3"
   }
 }
