--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hanakla/micetrap",
-  "version": "1.0.0",
+  "version": "1.0.1-rc.1",
   "description": "Simple library for handling keyboard shortcuts",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
